apps/base/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dashboard
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 50M 
            limits:
              cpu: 500m
              memory: 100M
          volumeMounts:
            - name: data
              mountPath: /etc
        - name: prometheus
          image: ekofr/pihole-exporter:latest
          ports:
            - name: metrics
              containerPort: 9617
          resources:
            requests:
              cpu: 100m
              memory: 50M 
            limits:
              cpu: 200m
              memory: 100M
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pihole
