apps/base/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
  annotations:
    prometheus.starsystem.dev/scrape: "true"
    prometheus.starsystem.dev/scheme: http
    prometheus.starsystem.dev/path: /metrics
    prometheus.starsystem.dev/port: "9617"
spec:
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dashboard
      port: 80
      targetPort: 80
      protocol: TCP
    - name: metrics
      port: 9617
      targetPort: 9617
      protocol: TCP
