apps/base/pihole/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dns.cluster.starsystem.dev`)
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        # As we'll be using Pihole's native password system (due to Authelia causing complications with Homer/Pihole Remote), there's no need for the Authelia middleware here
        - name: network-system-pihole-pathprefix@kubernetescrd
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-dns
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole
          port: 53
